--- a/admin/index.html
+++ b/admin/index.html
@@ -29,7 +29,7 @@
             </li>
         </ul>
         <div class="poncon-home poncon-page" style="display: none;">
-            <button class="btn btn-primary mb-3">新增关键词</button>
+            <button class="btn btn-primary mb-3 addKeyword">新增关键词</button>
             <table class="table" style="display: none;">
                 <thead>
                     <tr>
@@ -44,90 +44,7 @@
             Github：<a href="https://github.com/oyps/good-wechat">https://github.com/oyps/good-wechat</a>
         </div>
     </div>
-    <script>
-        const poncon = new Poncon()
-        poncon.setPageList(['home', 'about'])
-        const pageData = {
-            home: {
-                load: false,
-                loadData(dom) {
-                    Ajax({
-                        url: 'get_keyword_list.php',
-                        success(data) {
-                            dom.querySelector('tbody').innerHTML = data
-                            dom.querySelector('table').style.display = 'revert'
-                            const eles = dom.querySelectorAll('td[contenteditable]')
-                            eles.forEach(element => {
-                                element.addEventListener('keydown', function (event) {
-                                    if (event.keyCode == 13 && !event.shiftKey) {
-                                        event.preventDefault()
-                                    }
-                                })
-                                element.addEventListener('keyup', function (event) {
-                                    if (event.keyCode == 13 && !event.shiftKey) {
-                                        if (confirm('确定要修改这个记录？')) {
-                                            const ele_self = event.target
-                                            const id = ele_self.getAttribute('data-id')
-                                            const ele_keyword = document.querySelector('td.keyword[data-id="' + id + '"]')
-                                            const ele_reply = document.querySelector('td.reply[data-id="' + id + '"]')
-                                            const keyword = ele_keyword.innerHTML
-                                            const reply = ele_reply.innerHTML
-                                            Ajax({
-                                                url: 'update_keyword.php',
-                                                method: 'POST',
-                                                headers: {
-                                                    'Content-Type': 'application/x-www-form-urlencoded'
-                                                },
-                                                content: 'keyword=' + encodeURIComponent(keyword)
-                                                    + '&reply=' + encodeURIComponent(reply)
-                                                    + '&id=' + id,
-                                                success(data) {
-                                                    if (!data) {
-                                                        alert('修改失败')
-                                                    }
-                                                }
-                                            })
-                                        }
-                                    }
-                                })
-                            })
-                            const eles_delete = dom.querySelectorAll('td.delete')
-                            eles_delete.forEach(element => {
-                                element.addEventListener('click', function (event) {
-                                    const ele_self = event.target
-                                    const ele_parent = ele_self.parentNode
-                                    const id = ele_self.getAttribute('data-id')
-                                    if (confirm('确定要删除该条记录？')) {
-                                        Ajax({
-                                            url: 'delete_keyword.php',
-                                            method: 'POST',
-                                            headers: {
-                                                'Content-Type': 'application/x-www-form-urlencoded'
-                                            },
-                                            content: 'id=' + id,
-                                            success(data) {
-                                                if (!data) {
-                                                    alert('删除失败')
-                                                }
-                                                ele_parent.remove()
-                                            }
-                                        })
-                                    }
-                                })
-                            })
-                        }
-                    })
-                    this.load = true
-                }
-            }
-        }
-        poncon.setPage('home', function (target, dom) {
-            if (!pageData.home.load) {
-                pageData.home.loadData(dom)
-            }
-        })
-        poncon.start()
-    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
