--- a/admin/index.html
+++ b/admin/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>机器人控制台</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
-    <script src="tool.js"></script>
     <style>
         .poncon-home td {
             width: 50%;
@@ -44,7 +43,7 @@
             Github：<a href="https://github.com/oyps/good-wechat">https://github.com/oyps/good-wechat</a>
         </div>
     </div>
-    <script src="index.js"></script>
+    <script src="./js/bundle.min.js"></script>
 </body>
 
 </html>
