完成前端机器人控制台-关键词回复管理面板

--- a/admin/index.html
+++ b/admin/index.html
@@ -8,7 +8,8 @@
     <title>机器人控制台</title>
     <link rel="stylesheet" href="https://cdn.staticfile.org/bootstrap/5.2.3/css/bootstrap.min.css">
     <style>
-        .poncon-home td {
+        .poncon-home td,
+        .poncon-home th {
             width: 50%;
             word-wrap: break-word;
             word-break: break-all;
