--- a/demo/login_app/index.html
+++ b/demo/login_app/index.html
@@ -16,6 +16,7 @@
             document.write(document.cookie)
         </script>
     </p>
+    <a href="http://api.apee.top/wechat/public/ponconsoft/good-wechat/public-login/login.php?app_id=2">扫码登录系统</a>
 </body>
 
 </html>
