--- a/demo/login_app/index.html
+++ b/demo/login_app/index.html
@@ -13,7 +13,7 @@
     <p>第三方的数据库已经保存了下面的信息哦，机器人数据库则什么也没有。当前 Cookie：</p>
     <p style="word-break: break-all; border: 1px solid chocolate; padding: 10px 20px;">
         <script>
-            document.write(document.cookie)
+            document.write(document.cookie || '未找到 Cookie，可能是没有登录')
         </script>
     </p>
     <a href="http://api.apee.top/wechat/public/ponconsoft/good-wechat/public-login/login.php?app_id=2">扫码登录系统</a>
